<resources>
    <string name="app_name">E04 Sum Calculator</string>
    <string name="pikkukuva">pikkukuva</string>
    <string name="laskuntulos">lasku</string>

    <!-- Laskimen napit -->
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="kertaa">*</string>

    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>

    <string name="zero">0</string>
    <string name="C">C</string>
    <string name="on">=</string>

</resources>